added ratings endpoints to api docs & fixed existing ratings not updating
